--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/*global styles*/
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+
+
