Changes to be committed: 	renamed:    src/browserslist -> browserslist 	modified:   package-lock.json 	modified:   package.json 	modified:   src/app/about/about.component.html 	modified:   src/app/about/about.component.scss 	modified:   src/app/app.component.html 	modified:   src/app/app.component.scss 	modified:   src/app/app.module.ts 	modified:   src/app/contact/contact.component.html 	modified:   src/app/contact/contact.component.scss 	modified:   src/app/facilities/carousel/carousel.component.scss 	deleted:    src/app/facilities/carousel/practicerun.py 	deleted:    src/app/facilities/carousel/pythontest.py 	modified:   src/app/facilities/facilities.component.html 	modified:   src/app/facilities/facilities.component.scss 	modified:   src/app/footer/footer.component.html 	modified:   src/app/footer/footer.component.scss 	modified:   src/app/home/home.component.html 	modified:   src/app/home/home.component.scss 	modified:   src/app/nav/nav.component.html 	modified:   src/index.html 	modified:   src/polyfills.ts 	modified:   src/styles.scss 	modified:   tsconfig.json 	modified:   tslint.json

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,5 +1,72 @@
 app-footer { 
-    position: absolute;
+    
     bottom: 0px;
-    width: 100%
+    width: 100%; 
 }
+
+.aboutpic {
+    max-width: 100%;
+    height: auto;
+   
+}
+
+h1 {
+    padding-top: 100px;
+    text-align: center;
+    padding-bottom: 100px;
+    color: white;
+    background: rgb(0, 81, 255);
+    animation: initialize 1s;
+}
+h2 {
+    padding-top: 60px;
+
+}
+
+p {
+    text-align: center;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-top: 50px;
+    animation: hopup 1s;
+}
+
+@media only screen and (min-width: 800px)  {
+    p {
+        text-align: center;
+        margin-left: 20%;
+        margin-right: 20%;
+        
+    }
+
+    app-footer {
+        bottom: 0px;
+        width: 100%;
+        position: absolute;
+    }
+}
+
+@keyframes initialize {
+    0% {
+        width: 0%;
+        opacity: 0;
+    }
+
+    100% {
+        width: 100%;
+        opacity: 1;
+    }
+}
+
+@keyframes hopup {
+    0% {
+        padding-top: 500px;
+        opacity: 0;
+    }
+
+    100% {
+        padding-top: 60px;
+        opacity: 1;
+    }
+}
+
