--- a/src/app/facilities/facilities.component.html
+++ b/src/app/facilities/facilities.component.html
@@ -1,13 +1,9 @@
 <body> 
 
-  
-
-  <!--carousel here with pics from mundell-->
+  <!--carousel here with pics-->
 
   <app-carousel></app-carousel>
   <div class="line"></div>
-
-
 
   <div class="introduction">
       <h1> 
@@ -72,4 +68,3 @@
 </body> 
 
 <app-footer></app-footer>
-
