--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,16 @@
 <body>
-  <div class="topcolor"></div>
+
   <h1>
     Serving Bay Area Seniors and their families since 1987
   </h1>
 
-  <div class="button-row">
-    
-  </div>
+      <div class="buttons">
+        <ul>
+          <li><button mat-raised-button class="mybutton" routerLink="/contact"><mat-icon>phone</mat-icon></button></li>
+          <li><button mat-raised-button class="mybutton" routerLink="/facilities"><mat-icon>home</mat-icon></button></li>
+          <li><button mat-raised-button class="mybutton" routerLink="/about"><mat-icon>info</mat-icon></button></li>      
+        </ul>
+      </div>
 
 </body>
 
