modified:   src/app/contact/clients/clients.component.scss 	modified:   src/app/contact/clients/clients.component.ts 	modified:   src/app/contact/contact.component.html 	modified:   src/app/contact/contact.component.scss 	modified:   src/app/facilities/facilities.component.scss 	modified:   src/app/footer/footer.component.html

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,23 +1,24 @@
-<h2></h2>
-<h1>
-  About Us
-</h1>
+<body>
+  <h2></h2>
+  <h1>
+    About Us
+  </h1>
 
-<p>
+  <p>
 
-  Palo Alto Care Homes has served the Bay Area for nearly 25 years.  With locations in Palo Alto and Los Altos, 
-  we provide senior care for both ambulatory and non-ambulatory guests in a lovely residential setting.
+    Palo Alto Care Homes has served the Bay Area for nearly 25 years.  With locations in Palo Alto and Los Altos, 
+    we provide senior care for both ambulatory and non-ambulatory guests in a lovely residential setting.
 
-  Our homes were founded in 1987 by Mrs. May Wang and are now operated by her son James.  
-  Our caring and professional staff – some of whom have been with us for over 15 years – 
-  operate a warm and cheerful environment where your loved ones will feel at home.  
-  We ensure that our residents always cared for by having a minimum of two staff members on duty 24/7.  
-  We are grateful to be entrusted with the caring and well-being of your loved ones and we work hard to make
-  them feel at home and provide them with a peaceful environment with friendly and dependable care. 
+    Our homes were founded in 1987 by Mrs. May Wang and are now operated by her son James.  
+    Our caring and professional staff – some of whom have been with us for over 15 years – 
+    operate a warm and cheerful environment where your loved ones will feel at home.  
+    We ensure that our residents always cared for by having a minimum of two staff members on duty 24/7.  
+    We are grateful to be entrusted with the caring and well-being of your loved ones and we work hard to make
+    them feel at home and provide them with a peaceful environment with friendly and dependable care. 
 
-</p>
+  </p>
+</body>
 
 <app-footer></app-footer>
-
 
 
