--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,19 +1,23 @@
 <footer class="page-footer">
-  <div class="container">
-    <div class="row">
-      <div id="links">
-        
-          <a class="grey-text text-lighten-3" href="/">Home</a>
-          <a class="grey-text text-lighten-3" href="/about">About</a>
-          <a class="grey-text text-lighten-3" href="/facilities">Facilities</a>
-          <a class="grey-text text-lighten-3" href="/contact">Contact</a>
-        
+  <div class = "body">
+    <div class="group">
+      <div class="link">
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/facilities">Facilities</a>
+        <a href="/contact">Contact</a>
       </div>
     </div>
+    <div class = "group">
+      <div class = "non-link">
+        <div class = "phone">
+          <a>(650) 814-4400</a>
+        </div>
+        <div class = "copyright">
+          <a>Maycare 2020</a>
+        </div>
+      </div>
+    </div>  
   </div>
-  <div class="footer-copyright">
-    <div class="container">
-    © 2020 Maycare
-    </div>
-  </div>
+
 </footer>
