--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,7 +1,8 @@
 app-footer { 
     
-    bottom: 0px;
+    bottom: 0;
     width: 100%; 
+    
 }
 
 .aboutpic {
@@ -10,13 +11,19 @@ app-footer {
    
 }
 
-h1 {
-    padding-top: 100px;
-    text-align: center;
+body {
+    font-family: 'Roboto', sans-serif;
     padding-bottom: 100px;
-    color: white;
-    background: rgb(0, 81, 255);
+}
+
+h1 {
+    padding-top: 180px;
+    text-align: center;
+    padding-bottom: 20px;
+    color: black;
+    background: #00d9ff;
     animation: initialize 1s;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2)
 }
 h2 {
     padding-top: 60px;
@@ -24,14 +31,15 @@ h2 {
 }
 
 p {
-    text-align: center;
-    margin-left: 10%;
-    margin-right: 10%;
+    text-align: left;
+    margin-left: 5%;
+    margin-right: 5%;
     padding-top: 50px;
     animation: hopup 1s;
+    font-size: 20px;
 }
 
-@media only screen and (min-width: 800px)  {
+@media(min-width: 800px)  {
     p {
         text-align: center;
         margin-left: 20%;
@@ -42,7 +50,11 @@ p {
     app-footer {
         bottom: 0px;
         width: 100%;
-        position: absolute;
+
+    }
+
+    body {
+        padding-bottom: 25%;
     }
 }
 
