--- a/src/app/facilities/facilities.component.scss
+++ b/src/app/facilities/facilities.component.scss
@@ -3,26 +3,25 @@
 body { 
     
     padding-top: 80px;
+    padding-bottom: 80px;
+    font-family: 'Roboto', sans-serif;
     
     
     h1 {
         font-size: 18px;
-        padding-left: 0%;
-        padding-right: 0%;
+        padding-left: 2%;
         animation: fadein 2s;
     }
 
     h2 {
         animation: fadein 3s;
         font-size: 14px;
-        padding-left: 0%;
-        padding-right: 0%;
+        padding-left: 2%;
     }
 
     h3 {
         font-size: 10px;
-        padding-left: 0%;
-        padding-right: 0%;
+        padding-left: 2%;
     }
 
     ul {
@@ -36,25 +35,10 @@ body {
         width: 100%;
         padding-top: 0%;   
         animation: fadein 2s;    
-    
-}
-    
-app-footer{
-    
-    bottom: 0px;
-    width: 100%;
-    
-}
-
-@media (min-width: 800px) {
-
-    app-footer{
-        bottom: 0px;
-        width: 100%;
-        
     }
-
 }
+
+
     /*Desktop view mobile first */
     @media only screen and (min-width: 800px)  {
 
@@ -114,7 +98,7 @@ app-footer{
         
 
     }
-}
+
 
 .line {
     background-color: #00d9ff;
