--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,16 +1,35 @@
 a {
     padding-left: 5px;
+    color: black;
+}
+
+.body {
+    padding-top: 0px;
+    padding-left: 100px;
 }
 
 .page-footer {
 
     background-color: rgba(172, 172, 172, 0.315);
+    padding-top: 10px;
+    padding-bottom: 10px;
     
 }
 
+.copyright {
+    font-size: 12px;
+}
 
-.row {
-    float: right;
+.phone {
+    font-size: 13px;
+}
+
+.non-link {
+    margin-top: 0px;
+}
+
+.link {
+    margin-top: -0px;
 }
 
 @media (min-width: 48em) {
@@ -18,20 +37,17 @@ a {
     a {
         padding-left: 50px;
     }
-    
-    #links ul {
 
-        list-style: none;
+    .group {
         display: inline-block;
-        
-
+        padding-left: 20%;
     }
 
-    .page-footer {
-
-        background-color: rgba(172, 172, 172, 0.315);
-
+    .body {
+        padding-left: 0%;
+        padding-top: 0px;
     }
+
 }
 
 
