--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,52 @@
   <h1>
     Serving Bay Area Seniors and their families since 1987
   </h1>
+      
+      <div class="textarea">
+        <div class="textgroup">
+          <div class="imagetext">
+            <div class="image">
+              <img src="assets/images/homepic1.PNG" alt="homepic1">
+            </div>
+          </div>
+          <div class="imagetext">
+            <div class="text">
+              <h2>Family Run Senior Care Homes</h2>
+              <p>
+                Palo Alto Care Homes has served the Bay Area since 1987. We have two senior care homes: 
+                one in Palo Alto and a second in Los Altos. Both of our homes are staffed by trained, caring 
+                and experienced professionals.
+              </p>
+              <p>
+                At Palo Alto Care Homes, our residents are part of one big 
+                family and when they are with us, we treat them as if they are are part of our very own family.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="textgroup">
+          <div class="imagetext">
+            <div class="text1">
+              <h3>Our Philosophy</h3>
+              <p>We believe that the basic principle of longevity lies in the harmony and balance of 
+                mental and physical health. Peace of mind and a sense of community will keep the elderly 
+                young at heart and free from worries. We aim to provide a friendly, caring environment that 
+                offers harmony, comfort and security and allows residents to live as they wish.</p>
+
+            </div>
+          </div>
+          <div class="imagetext">
+            
+            <div class="image">
+              <img src="assets/images/homepic2.PNG" alt="homepic2">
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
 
       <div class="buttons">
         <ul>
@@ -11,7 +57,6 @@
           <li><button mat-raised-button class="mybutton" routerLink="/about"><mat-icon>info</mat-icon></button></li>      
         </ul>
       </div>
-
 </body>
 
 <app-footer></app-footer>
