--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,3 @@
 /*global styles*/
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
