--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
     <div class = "group">
       <div class = "non-link">
         <div class = "phone">
-          <a>(650) 814-4400</a>
+          <a>Phone: (650) 814-4400</a>
         </div>
         <div class = "copyright">
           <a>info@paloaltocarehomes.com</a>
